[package]
name = "mcping-api"
version = "0.1.0"
edition = "2024"
description = "Minecraft 服务器 ping + 原版风格出图的独立 HTTP API（从 abot 抽出）"
license = "AGPL-3.0-or-later"
repository = "https://github.com/djkcyl/mcping-api"
authors = ["djkcyl <cyl@cyllive.cn>"]
readme = "README.md"

[[bin]]
name = "mcping-api"
path = "src/main.rs"

[dependencies]
# 渲染栈(与 abot 同款,纯 Rust 自包含)
image = { version = "0.25.5", default-features = false, features = ["png", "gif", "jpeg", "webp"] }
ar-reshaper = "1.5.0"
unicode-bidi = "0.3.18"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time"] }
# HTTP API
axum = "0.8"
anyhow = "1.0.102"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# 不设 panic = "abort":保留 unwind,让 axum 把单次请求的 panic 兜成 500,不拖垮整个服务。
